Fix alignment issues with dropdown in some contexts

--- a/app/styles/contentscript.css
+++ b/app/styles/contentscript.css
@@ -13,11 +13,13 @@
 .dropdown-content {
   display: none;
   position: absolute;
+  clear: both;
   background-color: white;
   min-width: 160px;
   padding: 5px 5px;
   overflow: auto;
   font-size: 12px;
+  text-align: left;
   border-left: 4px solid #28ADCA;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
